Bugfix: hiding animation of desktop view input form now correctly sets the form's visibility to hidden instead of just making it opaque.

--- a/scss/modules/_animations.scss
+++ b/scss/modules/_animations.scss
@@ -12,7 +12,6 @@
 
 }
 .slideToTop{
-
   @media (max-width: 1024px){
     animation: disappear;
     animation-duration: 1.5s;
@@ -55,6 +54,7 @@
     opacity: 0;
     padding: 0;
     margin: 0;
+    visibility: hidden;
   }
 }
 
